--- a/config.jsonc
+++ b/config.jsonc
@@ -28,7 +28,7 @@
     },
     "cava": {
         "framerate": 60,
-        "sensitivity": 100,
+        "autosens": 1,
         "bars": 96,
         "lower_cutoff_freq": 50,
         "higher_cutoff_freq": 10000,
